refactor(i18n): replace Locale constructor with Locale.of for improved readability